@@ -1,3 +1,26 @@
+/*
+ * ui.h - Atari user interface definitions
+ *
+ * Copyright (C) 1995-1998 David Firth
+ * Copyright (C) 1998-2008 Atari800 development team (see DOC/CREDITS)
+ *
+ * This file is part of the Atari800 emulator project which emulates
+ * the Atari 400, 800, 800XL, 130XE, and 5200 8-bit computers.
+ *
+ * Atari800 is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * Atari800 is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Atari800; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ */
 #ifndef _UI_H_
 #define _UI_H_
 
@@ -115,7 +138,7 @@ typedef int (*fnGetLoadFilename)(char *filename, char directories[][FILENAME_MAX
 /* GetDirectoryPath is a directory browser */
 typedef int (*fnGetDirectoryPath)(char *directory);
 /* Message is just some kind of MessageBox */
-typedef void (*fnMessage)(const char *message);
+typedef void (*fnMessage)(const char *message, int waitforkey);
 /* InfoScreen displays a "long" message.
    Caution: lines in pMessage should be ended with '\0', the message should be terminated with '\n'. */
 typedef void (*fnInfoScreen)(const char *title, const char *message);
